# obsws-python

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  setup.py
examples/events/: README.md  __main__.py
examples/hotkeys/: README.md  __main__.py  setup.py
examples/levels/: README.md  __main__.py
examples/scene_rotate/: README.md  __main__.py
obsstudio_sdk/: __init__.py  baseclient.py  callback.py  events.py  reqs.py  util.py
obsws_python/: __init__.py  baseclient.py  callback.py  error.py  events.py  reqs.py  subs.py  version.py
tests/: __init__.py  test_attrs.py  test_callback.py  test_error.py  test_request.py
